--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,11 @@
 %%% -*- mode: erlang -*-
 
 %% Erlang compiler options
-{erl_opts, [fail_on_warning
+{erl_opts, [debug_info, fail_on_warning
             , {i, "./priv/"}
             , {i, "../gmt-util/include/"}
             , {i, "../partition-detector/include/"}
            ]}.
+
+%% EUnit options
+{eunit_opts, [verbose]}.
