--- a/rebar.config
+++ b/rebar.config
@@ -3,8 +3,8 @@
 %% Erlang compiler options
 {erl_opts, [debug_info, fail_on_warning
             , {i, "./priv/"}
-            , {i, "../gmt-util/include/"}
-            , {i, "../partition-detector/include/"}
+            , {i, "../gmt/include/"}
+            , {i, "../partition_detector/include/"}
            ]}.
 
 %% EUnit options
