--- a/rebar.config
+++ b/rebar.config
@@ -1,9 +1,12 @@
 %%% -*- mode: erlang -*-
 
 %% Erlang compiler options
-{erl_opts, [debug_info, warnings_as_errors
-            , {i, "../gmt_util/include/"}
-            , {i, "../partition_detector/include/"}
+{erl_opts, [%% In Erlang releases after 17, use dict:dict()
+            %% and queue:queue() for dict() and queue() types.
+            {platform_define, "^[0-9]+", namespaced_dict_and_queue},
+            debug_info, warnings_as_errors,
+            {i, "../gmt_util/include/"},
+            {i, "../partition_detector/include/"}
            ]}.
 
 %% EUnit options
