--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,6 @@
 %%% -*- mode: erlang -*-
 
-%% Require OTP version R16 or 17
-{require_otp_vsn, "R16|17"}.
+{require_otp_vsn, "R16|17|18"}.
 
 %% Depends
 {deps_dir, "../"}.
